fix incorrect use of + to concatenate non strings - switched to ~ instead

--- a/govuk_frontend_jinja/components/character-count/macro.html
+++ b/govuk_frontend_jinja/components/character-count/macro.html
@@ -27,7 +27,7 @@
     'attributes': params.attributes
   }) }}
   {{ govukHint({
-    'text': 'You can enter up to ' + (params.maxlength or params.maxwords) + (' words' if params.maxwords else ' characters'),
+    'text': 'You can enter up to ' ~ (params.maxlength or params.maxwords) ~ (' words' if params.maxwords else ' characters'),
     'id': params.id + '-info',
     'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else ''),
     'attributes': {
