--- a/govuk_frontend_jinja/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/components/checkboxes/macro.html
@@ -15,10 +15,10 @@
    {% set describedBy = params.fieldset.describedBy %}
 {% endif %}
 
-{% set isConditional = False %}
+{% set ns = namespace(isConditional=False) %}
 {% for item in params['items'] %}
   {% if item.conditional and item.conditional.html %}
-    {% set isConditional = True %}
+    {% set ns.isConditional = True %}
   {% endif %}
 {% endfor %}
 
@@ -52,7 +52,7 @@
 {% endif %}
   <div class="govuk-checkboxes {%- if params.classes %} {{ params.classes }}{% endif %}"
     {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
-    {%- if isConditional %} data-module="govuk-checkboxes"{% endif -%}>
+    {%- if ns.isConditional %} data-module="govuk-checkboxes"{% endif -%}>
     {% for item in params['items'] %}
       {% if item %}
         {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
