--- a/govuk_frontend_jinja/components/radios/macro.html
+++ b/govuk_frontend_jinja/components/radios/macro.html
@@ -12,10 +12,10 @@
    aria-describedby – for example hints or error messages -#}
 {% set describedBy = params.fieldset.describedBy if params.fieldset and params.fieldset.describedBy else "" %}
 
-{% set isConditional = False %}
+{% set ns = namespace(isConditional=False) %}
 {% for item in params['items'] %}
   {% if item.conditional and item.conditional.html %}
-    {% set isConditional = True %}
+    {% set ns.isConditional = True %}
   {% endif %}
 {% endfor %}
 
@@ -44,9 +44,9 @@
     'visuallyHiddenText': params.errorMessage.visuallyHiddenText
   }) | trim }}
 {% endif %}
-  <div class="govuk-radios {%- if params.classes %} {{ params.classes }}{% endif %}{%- if isConditional %} govuk-radios--conditional{% endif -%}"
+  <div class="govuk-radios {%- if params.classes %} {{ params.classes }}{% endif %}{%- if ns.isConditional %} govuk-radios--conditional{% endif -%}"
     {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
-    {%- if isConditional %} data-module="govuk-radios"{% endif -%}>
+    {%- if ns.isConditional %} data-module="govuk-radios"{% endif -%}>
     {% for item in params['items'] %}
       {% if item %}
         {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
