--- a/govuk_frontend_jinja/components/summary-list/macro.html
+++ b/govuk_frontend_jinja/components/summary-list/macro.html
@@ -9,9 +9,9 @@
 {% endmacro -%}
 
 {# Determine if we need 2 or 3 columns #}
-{% set anyRowHasActions = False %}
+{% set ns = namespace(anyRowHasActions=False) %}
 {% for row in params.rows %}
-  {% set anyRowHasActions = True if row.actions and row.actions['items'] | length else anyRowHasActions %}
+  {% set ns.anyRowHasActions = True if row.actions and row.actions['items'] | length else ns.anyRowHasActions %}
 {% endfor -%}
 
 <dl class="govuk-summary-list {%- if params.classes %} {{ params.classes }}{% endif %}"{% for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
@@ -38,7 +38,7 @@
               </ul>
             {% endif %}
           </dd>
-        {% elif anyRowHasActions %}
+        {% elif ns.anyRowHasActions %}
           {# Add dummy column to extend border #}
           <span class="govuk-summary-list__actions"></span>
         {% endif %}
