Fix more jinja variable scoping issues using namespaces

--- a/govuk_frontend_jinja/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/components/checkboxes/macro.html
@@ -8,14 +8,16 @@
    instead. We need this for error messages and hints as well -#}
 {% set idPrefix = params.idPrefix if params.idPrefix else params.name %}
 
+{% set ns = namespace() %}
+
 {#- a record of other elements that we need to associate with the input using
    aria-describedby – for example hints or error messages -#}
-{% set describedBy = params.describedBy if params.describedBy else "" %}
+{% set ns.describedBy = params.describedBy if params.describedBy else "" %}
 {% if params.fieldset and params.fieldset.describedBy %}
-   {% set describedBy = params.fieldset.describedBy %}
+   {% set ns.describedBy = params.fieldset.describedBy %}
 {% endif %}
 
-{% set ns = namespace(isConditional=False) %}
+{% set ns.isConditional = False %}
 {% for item in params['items'] %}
   {% if item.conditional and item.conditional.html %}
     {% set ns.isConditional = True %}
@@ -29,7 +31,7 @@
 {% set innerHtml %}
 {% if params.hint %}
   {% set hintId = idPrefix + '-hint' %}
-  {% set describedBy = describedBy + ' ' + hintId if describedBy else hintId %}
+  {% set ns.describedBy = ns.describedBy + ' ' + hintId if ns.describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
     'classes': (params.hint.classes if params.hint and params.hint.classes),
@@ -40,7 +42,7 @@
 {% endif %}
 {% if params.errorMessage %}
   {% set errorId = idPrefix + '-error' %}
-  {% set describedBy = describedBy + ' ' + errorId if describedBy else errorId %}
+  {% set ns.describedBy = ns.describedBy + ' ' + errorId if ns.describedBy else errorId %}
   {{ govukErrorMessage({
     'id': errorId,
     'classes': params.errorMessage.classes,
@@ -70,7 +72,7 @@
         {% set conditionalId = "conditional-" + id %}
         {% set hasHint = True if (item.hint.text if item.hint and item.hint.text) or (item.hint.html if item.hint and item.hint.html) %}
         {% set itemHintId = id + "-item-hint" if hasHint else "" %}
-        {% set itemDescribedBy = describedBy if not hasFieldset else "" %}
+        {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
         {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
@@ -109,7 +111,7 @@
 <div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}">
 {% if params.fieldset %}
   {% call govukFieldset({
-    'describedBy': describedBy,
+    'describedBy': ns.describedBy,
     'classes': params.fieldset.classes,
     'attributes': params.fieldset.attributes,
     'legend': params.fieldset.legend
