--- a/govuk_frontend_jinja/templates/template.html
+++ b/govuk_frontend_jinja/templates/template.html
@@ -27,7 +27,7 @@
     {# image url needs to be absolute e.g. http://wwww.domain.com/.govuk_frontend_jinja/.govuk_frontend_jinja/govuk-opengraph-image.png #}
     <meta property="og:image" content="{{ assetUrl | default('/assets') }}/images/govuk-opengraph-image.png">
   </head>
-  <body class="govuk-template__body {{ bodyClasses }}" {%- for attribute, value in bodyAttributes %} {{attribute}}="{{value}}"{% endfor %}>
+  <body class="govuk-template__body {{ bodyClasses }}" {%- for attribute, value in (bodyAttributes.items() if bodyAttributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
     {% block bodyStart %}{% endblock %}
 
