--- a/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
@@ -1,7 +1,7 @@
 {% macro govukCookieBanner (params) %}
 {% from "govuk_frontend_jinja/components/button/macro.html" import govukButton -%}
 
-<div class="govuk-cookie-banner {{ params.classes if params.classes }}" role="region" aria-label="{{ params.ariaLabel | default('Cookie banner') }}"
+<div class="govuk-cookie-banner {{ params.classes if params.classes }}" data-nosnippet role="region" aria-label="{{ params.ariaLabel | default("Cookie banner") }}"
   {%- if params.hidden %} hidden{% endif %}
   {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
 
@@ -41,19 +41,29 @@
       <div class="govuk-button-group">
         {% for action in message.actions %}
           {% if action.href %}
-            {% set linkClasses = "govuk-link" %}
-            {% if action.classes %}
-              {% set linkClasses = linkClasses + " " + action.classes %}
+            {% if action.type == "button" %}
+              {{ govukButton({
+                "text": action.text,
+                "type": "button",
+                "classes": action.classes,
+                "href": action.href,
+                "attributes": action.attributes
+              }) | indent(12) | trim }}
+            {% else %}
+              {% set linkClasses = "govuk-link" %}
+              {% if action.classes %}
+                {% set linkClasses = linkClasses + " " + action.classes %}
+              {% endif %}
+              <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in (action.attributes.items() if action.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
             {% endif %}
-            <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in (action.attributes.items() if action.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
           {% else %}
             {{ govukButton({
-              'text': action.text,
-              'value': action.value,
-              'name': action.name,
-              'type': action.type,
-              'classes': action.classes,
-              'attributes': action.attributes
+              "text": action.text,
+              "value": action.value,
+              "name": action.name,
+              "type": action.type,
+              "classes": action.classes,
+              "attributes": action.attributes
             }) | indent(12) | trim }}
           {% endif %}
         {% endfor %}
