--- a/govuk_frontend_jinja/templates/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/templates/components/checkboxes/macro.html
@@ -17,14 +17,7 @@
    {% set ns.describedBy = params.fieldset.describedBy %}
 {% endif %}
 
-{% set ns.isConditional = False %}
-{% for item in params['items'] %}
-  {% if item.conditional and item.conditional.html %}
-    {% set ns.isConditional = True %}
-  {% endif %}
-{% endfor %}
-
-{#- fieldset is False by default -#}
+{#- fieldset is false by default -#}
 {% set hasFieldset = True if params.fieldset else False %}
 
 {#- Capture the HTML so we can optionally nest it in a fieldset -#}
@@ -54,7 +47,7 @@
 {% endif %}
   <div class="govuk-checkboxes {%- if params.classes %} {{ params.classes }}{% endif %}"
     {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
-    {%- if ns.isConditional %} data-module="govuk-checkboxes"{% endif -%}>
+    data-module="govuk-checkboxes">
     {% for item in params['items'] %}
       {% if item %}
         {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
@@ -70,38 +63,43 @@
         {%- endif -%}
         {% set name = item.name if item.name else params.name %}
         {% set conditionalId = "conditional-" + id %}
-        {% set hasHint = True if (item.hint.text if item.hint and item.hint.text) or (item.hint.html if item.hint and item.hint.html) %}
-        {% set itemHintId = id + "-item-hint" if hasHint else "" %}
-        {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
-        {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
-          {{-" checked" if item.checked }}
-          {{-" disabled" if item.disabled }}
-          {%- if item.conditional and item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
-          {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
-          {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}>
-          {{ govukLabel({
-            'html': item.html,
-            'text': item.text,
-            'classes': 'govuk-checkboxes__label' + (' ' + item.label.classes if item.label and item.label.classes else ''),
-            'attributes': (item.label.attributes if item.label and item.label.attributes),
-            'for': id
-          }) | trim }}
-          {% if hasHint %}
-          {{ govukHint({
-            'id': itemHintId,
-            'classes': 'govuk-checkboxes__hint' + (' ' + item.hint.classes if item.hint.classes else ''),
-            'attributes': item.hint.attributes,
-            'html': item.hint.html,
-            'text': item.hint.text
-          }) | trim }}
-          {% endif %}
-        </div>
-        {% if item.conditional and item.conditional.html %}
-          <div class="govuk-checkboxes__conditional{% if not item.checked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
-            {{ item.conditional.html | safe }}
+        {%- if item.divider %}
+          <div class="govuk-checkboxes__divider">{{ item.divider }}</div>
+        {%- else %}
+          {% set hasHint = True if (item.hint.text if item.hint and item.hint.text) or (item.hint.html if item.hint and item.hint.html) %}
+          {% set itemHintId = id + "-item-hint" if hasHint else "" %}
+          {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
+          {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
+            {{-" checked" if item.checked }}
+            {{-" disabled" if item.disabled }}
+            {%- if item.conditional and item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
+            {%- if item.behaviour %} data-behaviour="{{ item.behaviour }}"{% endif -%}
+            {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
+            {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}>
+            {{ govukLabel({
+              'html': item.html,
+              'text': item.text,
+              'classes': 'govuk-checkboxes__label' + (' ' + item.label.classes if item.label and item.label.classes else ''),
+              'attributes': (item.label.attributes if item.label and item.label.attributes),
+              'for': id
+            }) | trim }}
+            {% if hasHint %}
+            {{ govukHint({
+              'id': itemHintId,
+              'classes': 'govuk-checkboxes__hint' + (' ' + item.hint.classes if item.hint.classes else ''),
+              'attributes': item.hint.attributes,
+              'html': item.hint.html,
+              'text': item.hint.text
+            }) | trim }}
+            {% endif %}
           </div>
+          {% if item.conditional and item.conditional.html %}
+            <div class="govuk-checkboxes__conditional{% if not item.checked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
+              {{ item.conditional.html | safe }}
+            </div>
+          {% endif %}
         {% endif %}
       {% endif %}
     {% endfor %}
@@ -122,5 +120,4 @@
   {{ innerHtml | trim | safe }}
 {% endif %}
 </div>
-
 {% endmacro %}
