--- a/govuk_frontend_jinja/templates/components/header/macro.html
+++ b/govuk_frontend_jinja/templates/components/header/macro.html
@@ -1,5 +1,5 @@
 {% macro govukHeader(params) %}
-<header class="govuk-header {{ params.classes if params.classes }}" role="banner" data-module="govuk-header"
+<header class="govuk-header {{ params.classes if params.classes else '' }}" role="banner" data-module="govuk-header"
   {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
   <div class="govuk-header__container {{ params.containerClasses | default('govuk-width-container') }}">
     <div class="govuk-header__logo">
