--- a/govuk_frontend_jinja/templates/components/error-message/macro.html
+++ b/govuk_frontend_jinja/templates/components/error-message/macro.html
@@ -1,9 +1,8 @@
 {% macro govukErrorMessage(params) %}
-  {% set visuallyHiddenText = params.visuallyHiddenText | default("Error") -%}
+{% set visuallyHiddenText = params.visuallyHiddenText | default("Error") -%}
 
-<span {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-error-message{%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}>
+<p {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-error-message{%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}>
   {% if visuallyHiddenText %}<span class="govuk-visually-hidden">{{ visuallyHiddenText }}:</span> {% endif -%}
   {{ params.html | safe if params.html else params.text }}
-</span>
-
+</p>
 {% endmacro %}
