--- a/govuk_frontend_jinja/templates/components/summary-list/macro.html
+++ b/govuk_frontend_jinja/templates/components/summary-list/macro.html
@@ -9,7 +9,7 @@
 {% endmacro -%}
 
 {# Determine if we need 2 or 3 columns #}
-{% set ns = namespace(anyRowHasActions = false) %}
+{% set ns = namespace(anyRowHasActions = False) %}
 {% for row in params.rows %}
   {% set ns.anyRowHasActions = True if row.actions and row.actions['items'] | length else ns.anyRowHasActions %}
 {% endfor -%}
@@ -17,7 +17,7 @@
 <dl class="govuk-summary-list {%- if params.classes %} {{ params.classes }}{% endif %}"{% for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
   {% for row in params.rows %}
     {% if row %}
-      <div class="govuk-summary-list__row {%- if anyRowHasActions and not row.actions.items %} govuk-summary-list__row--no-actions{% endif %} {%- if row.classes %} {{ row.classes }}{% endif %}">
+      <div class="govuk-summary-list__row {%- if ns.anyRowHasActions and not (row.actions and row.actions['items']) %} govuk-summary-list__row--no-actions{% endif %} {%- if row.classes %} {{ row.classes }}{% endif %}">
         <dt class="govuk-summary-list__key {%- if row.key.classes %} {{ row.key.classes }}{% endif %}">
           {{ row.key.html | safe if row.key.html else row.key.text }}
         </dt>
