--- a/govuk_frontend_jinja/templates/components/error-summary/macro.html
+++ b/govuk_frontend_jinja/templates/components/error-summary/macro.html
@@ -1,6 +1,7 @@
 {% macro govukErrorSummary(params) %}
-  <div class="govuk-error-summary
-  {%- if params.classes %} {{ params.classes }}{% endif %}" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
+<div class="govuk-error-summary
+  {%- if params.classes %} {{ params.classes }}{% endif %}" aria-labelledby="error-summary-title" role="alert"
+  {%- if params.disableAutoFocus %} data-disable-auto-focus="true"{% endif %}
   {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     {{ params.titleHtml | safe if params.titleHtml else params.titleText }}
@@ -24,5 +25,4 @@
     </ul>
   </div>
 </div>
-
 {% endmacro %}
