remove aria-live attribute

--- a/govuk_frontend_jinja/templates/components/character-count/macro.html
+++ b/govuk_frontend_jinja/templates/components/character-count/macro.html
@@ -30,10 +30,7 @@
   {{ govukHint({
     'text': 'You can enter up to ' ~ (params.maxlength or params.maxwords) ~ (' words' if params.maxwords else ' characters'),
     'id': params.id + '-info',
-    'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else ''),
-    'attributes': {
-      'aria-live': 'polite'
-    }
+    'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else '')
   }) }}
 </div>
 
