--- a/govuk_frontend_jinja/templates/components/select/macro.html
+++ b/govuk_frontend_jinja/templates/components/select/macro.html
@@ -46,7 +46,7 @@
     {% for item in params['items'] %}
       {% if item %}
         <option value="{{ item.value }}"
-          {{-" selected" if item.selected }}
+          {{-" selected" if item.selected | default(params.value and (item.value == params.value) ) }}
           {{-" disabled" if item.disabled }}
           {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}>{{ item.text }}</option>
       {% endif %}
