--- a/govuk_frontend_jinja/templates/components/details/macro.html
+++ b/govuk_frontend_jinja/templates/components/details/macro.html
@@ -6,7 +6,7 @@
     </span>
   </summary>
   <div class="govuk-details__text">
-    {{ params.html | safe if params.html else params.text }}
+    {{ caller() if caller else (params.html | safe if params.html else params.text) }}
   </div>
 </details>
 
