--- a/govuk_frontend_jinja/templates/components/tabs/macro.html
+++ b/govuk_frontend_jinja/templates/components/tabs/macro.html
@@ -27,8 +27,12 @@
       {% if item %}
         {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
         <div class="govuk-tabs__panel{% if loop.index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ id }}"{% for attribute, value in (item.panel.attributes.items() if item.panel.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
-          {{ item.panel.html | safe if item.panel.html else item.panel.text }}
-        </div>
+          {% if item.panel.html %}
+            {{ item.panel.html | safe }}
+          {% elif item.panel.text %}
+            <p class="govuk-body">{{ item.panel.text }}</p>
+          {% endif %}
+          </div>
       {% endif %}
     {% endfor %}
   {% endif %}
