--- a/govuk_frontend_jinja/templates/components/character-count/macro.html
+++ b/govuk_frontend_jinja/templates/components/character-count/macro.html
@@ -1,11 +1,28 @@
 {% macro govukCharacterCount(params) %}
+{% from "govuk_frontend_jinja/macros/i18n.html" import govukPluralisedI18nAttributes %}
+
 {% from "govuk_frontend_jinja/components/textarea/macro.html" import govukTextarea %}
 {% from "govuk_frontend_jinja/components/hint/macro.html" import govukHint %}
+
+{%- set hasNoLimit = (not params.maxwords and not params.maxlength) %}
 
 <div class="govuk-character-count" data-module="govuk-character-count"
 {%- if params.maxlength %} data-maxlength="{{ params.maxlength }}"{% endif %}
 {%- if params.threshold %} data-threshold="{{ params.threshold }}"{% endif %}
-{%- if params.maxwords %} data-maxwords="{{ params.maxwords }}"{% endif %}>
+{%- if params.maxwords %} data-maxwords="{{ params.maxwords }}"{% endif %}
+{#
+  Without maxlength or maxwords, we can't guess if the component will count words or characters.
+  We can't guess a default textarea description to be interpolated in JavaScript
+  once the maximum gets configured there.
+  So we only add the attribute if a textarea description was explicitely provided.
+#}
+{%- if hasNoLimit and params.textareaDescriptionText %}{{govukPluralisedI18nAttributes('textarea-description', {other: params.textareaDescriptionText})}}{% endif %}
+{%- if params.charactersUnderLimitText %}{{govukPluralisedI18nAttributes('characters-under-limit', params.charactersUnderLimitText)}}{% endif %}
+{%- if params.charactersAtLimitText %} data-i18n.characters-at-limit="{{ params.charactersAtLimitText | escape}}"{% endif %}
+{%- if params.charactersOverLimitText %}{{govukPluralisedI18nAttributes('characters-over-limit', params.charactersOverLimitText)}}{% endif %}
+{%- if params.wordsUnderLimitText %}{{govukPluralisedI18nAttributes('words-under-limit', params.wordsUnderLimitText)}}{% endif %}
+{%- if params.wordsAtLimitText %} data-i18n.words-at-limit="{{ params.wordsAtLimitText | escape}}"{% endif %}
+{%- if params.wordsOverLimitText %}{{govukPluralisedI18nAttributes('words-over-limit', params.wordsOverLimitText)}}{% endif %}>
   {{ govukTextarea({
     'id': params.id,
     'name': params.name,
@@ -14,7 +31,7 @@
     'spellcheck': params.spellcheck,
     'value': params.value,
     'formGroup': params.formGroup,
-    'classes': 'govuk-js-character-count' + (' govuk-textarea--error' if params.errorMessage else '') + (' ' + params.classes if params.classes else ''),
+    'classes': 'govuk-js-character-count' + (' ' + params.classes if params.classes else ''),
     'label': {
       'html': params.label.html,
       'text': params.label.text,
@@ -27,11 +44,17 @@
     'errorMessage': params.errorMessage,
     'attributes': params.attributes
   }) }}
+  {%- set textareaDescriptionLength = params.maxwords or params.maxlength %}
+  {%- set textareaDescriptionText = params.textareaDescriptionText or 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
+  {#
+    If the limit is set in JavaScript, we won't be able to interpolate the message
+    until JavaScript, so we only set a text if the `maxlength` or `maxwords` options
+    were provided to the macro.
+  #}
   {{ govukHint({
-    'text': 'You can enter up to ' ~ (params.maxlength or params.maxwords) ~ (' words' if params.maxwords else ' characters'),
+    'text': ((textareaDescriptionText) | replace('%{count}', textareaDescriptionLength) if not hasNoLimit),
     'id': params.id + '-info',
     'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else '')
   }) }}
 </div>
-
 {% endmacro %}
