--- a/govuk_frontend_jinja/templates/components/tabs/macro.html
+++ b/govuk_frontend_jinja/templates/components/tabs/macro.html
@@ -1,7 +1,7 @@
 {% macro govukTabs(params) %}
-  {#- If an id 'prefix' is not passed, fall back to using the name attribute
+{#- If an id 'prefix' is not passed, fall back to using the name attribute
    instead. We need this for error messages and hints as well -#}
-{% set idPrefix = params.idPrefix if params.idPrefix else '' -%}
+{% set idPrefix = params.idPrefix if params.idPrefix -%}
 
 <div {%- if params.id %} id="{{params.id}}"{% endif %} class="govuk-tabs {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %} data-module="govuk-tabs">
   <h2 class="govuk-tabs__title">
@@ -11,7 +11,7 @@
   <ul class="govuk-tabs__list">
     {% for item in params['items'] %}
       {% if item %}
-        {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
+        {% set id = item.id if item.id else idPrefix + "-" + loop.index %}
         <li class="govuk-tabs__list-item{% if loop.index == 1 %} govuk-tabs__list-item--selected{% endif %}">
           <a class="govuk-tabs__tab" href="#{{ id }}"
             {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
@@ -25,7 +25,7 @@
   {% if 'items' in params and params['items'] | length %}
     {% for item in params['items'] %}
       {% if item %}
-        {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
+        {% set id = item.id if item.id else idPrefix + "-" + loop.index %}
         <div class="govuk-tabs__panel{% if loop.index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ id }}"{% for attribute, value in (item.panel.attributes.items() if item.panel.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
           {% if item.panel.html %}
             {{ item.panel.html | safe }}
@@ -37,5 +37,4 @@
     {% endfor %}
   {% endif %}
 </div>
-
 {% endmacro %}
