--- a/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
@@ -13,7 +13,7 @@
 
     <div class="{{classNames}}" {%- if message.role %} role="{{message.role}}"{% endif %}
     {%- for attribute, value in (message.attributes.items() if message.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}
-    {% if message.hidden %} hidden{% endif %}>
+    {%- if message.hidden %} hidden{% endif %}>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
