--- a/govuk_frontend_jinja/templates/components/select/macro.html
+++ b/govuk_frontend_jinja/templates/components/select/macro.html
@@ -44,7 +44,7 @@
     {%- if params.classes %} {{ params.classes }}{% endif %}{%- if params.errorMessage %} govuk-select--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}"
     {%- if params.disabled %} disabled{% endif %}
     {%- if describedBy %} aria-describedby="{{ describedBy }}"{% endif %}
-    {%- for attribute, value in params.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
+    {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
     {% if 'items' in params and params['items'] | length %}
       {% for item in params['items'] %}
         {% if item %}
