--- a/govuk_frontend_jinja/templates/components/breadcrumbs/macro.html
+++ b/govuk_frontend_jinja/templates/components/breadcrumbs/macro.html
@@ -1,9 +1,9 @@
 {% macro govukBreadcrumbs(params) %}
-  {# Set classes for this component #}
-{%- set classNames = "govuk-breadcrumbs " -%}
+{# Set classes for this component #}
+{%- set classNames = "govuk-breadcrumbs" -%}
 
 {% if params.classes %}
-  {% set classNames = classNames + params.classes %}
+  {% set classNames = classNames + " " + params.classes %}
 {% endif -%}
 
 {% if params.collapseOnMobile %}
@@ -23,5 +23,4 @@
   {% endfor %}
   </ol>
 </div>
-
 {% endmacro %}
