warning text changes

--- a/govuk_frontend_jinja/templates/components/warning-text/macro.html
+++ b/govuk_frontend_jinja/templates/components/warning-text/macro.html
@@ -1,12 +1,11 @@
 {% macro govukWarningText(params) %}
-  <div class="govuk-warning-text {{- ' ' + params.classes if params.classes else ''}}"
+<div class="govuk-warning-text {{- ' ' + params.classes if params.classes}}"
   {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor -%}
   >
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">{{ params.iconFallbackText | default("Warning") }}</span>
+    <span class="govuk-visually-hidden">{{ params.iconFallbackText | default("Warning", true) }}</span>
     {{ params.html | safe if params.html else params.text }}
   </strong>
 </div>
-
 {% endmacro %}
